tests/baselines/reference/topLevelLambda.errors.txt
==== tests/cases/compiler/topLevelLambda.ts (1 errors) ====
    module M {
        var f = () => {this.window;}
                    ~~~~
!!! topLevelLambda.ts(2,17): error TS2108: 'this' cannot be referenced within module bodies.
    }
    